change package name

--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Homepage: http://lliurex.net
 #Vcs-Git: https://anonscm.debian.org/git/collab-maint/edupals-qt.git
 Vcs-Browser: https://github.com/edupals/python-edupals-qt
 
-Package: python-edupals-qt
+Package: python3-edupals-qt
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${python3:Depends}, python3, gettext, python-pyqt5
 Description: Helpers to build qt apps in python
