--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,6 @@ Vcs-Browser: https://github.com/edupals/python-edupals-qt
 
 Package: python3-edupals-qt
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${python3:Depends}, python3, gettext, python-pyqt5
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${python3:Depends}, python3, gettext, python3-pyqt5
 Description: Helpers to build qt apps in python
  Libraries to build qt apps in python. For example: replace translate engine to gettext
